Advanced_Feature/3.17_TCPRoute_Weight/gw-tcp-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tcp-gw
  namespace: web
spec:
  gatewayClassName: f5-bnk-gateway-class

  addresses:
    - type: IPAddress
      value: 40.30.20.20

  listeners:
    - name: bnk-listener
      protocol: TCP
      port: 80

      allowedRoutes:
        namespaces:
          from: All

        kinds:
          - kind: TCPRoute

---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: tcp-weight-route
  namespace: web
spec:
  parentRefs:
    - name: tcp-gw
      sectionName: bnk-listener

  rules:
    - backendRefs:
        - name: coffee-pool
          kind: Pool
          group: k8s.f5net.com
          weight: 70
        - name: tea-pool
          kind: Pool
          group: k8s.f5net.com
          weight: 30
